# latchpoint

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yml  ci-tests.yml  ci.yml  cleanup-pr-image.yml  deploy-demo.yml  release.yml  tests.yml
backend/: manage.py
backend/accounts/: admin.py  authentication.py  hashers.py  managers.py  models.py  permissions.py  policies.py  serializers.py  urls.py
backend/alarm/: admin.py  apps.py  code_attempt_guard.py  consumers.py  crypto.py  env_config.py  integration_helpers.py  integration_settings_masking.py  log_handler.py  middleware.py  models.py  rearm_guard.py  receivers.py  routing.py  rules_engine.py  settings_registry.py  signals.py  system_config_utils.py  system_status.py  tasks.py  urls.py  websocket.py  ws_signals.py
backend/config/: asgi.py  domain_exceptions.py  exception_handler.py  pagination.py  renderers.py  settings.py  urls.py  view_utils.py
backend/control_panels/: apps.py  models.py  runtime.py  serializers.py  services.py  urls.py  views.py  zwave_ring_keypad_v2.py
backend/integrations_frigate/: apps.py  config.py  models.py  parsing.py  runtime.py  serializers.py  tasks.py  urls.py  views.py
backend/locks/: apps.py  urls.py  (+3 more)
docker/: entrypoint.backend.dev.sh  entrypoint.sh  nginx.conf  supervisord.dev.conf  supervisord.prod.conf
docs/: ONBOARDING.md  ZIGBEE2MQTT.md  control-panels.md
frontend/: .gitignore  TEST_COVERAGE_TODO.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: README.md  docker-makemigrations.sh  docker-migrate.sh  docker-rebuild-backend.sh  docker-rebuild-frontend.sh  docker-seed-test-home.sh  docker-shell.sh  docker-test-ha.sh  docker-test-phase2.sh  docker-test.sh
(+1084 files in other folders)
